CHANGES
*******

0.14 (unreleased)
=================

- Nothing changed yet.


0.13.2 (2012-08-23)
===================

- Fixed issue #78: "fanstatic.checksum.md5 is not guaranteed", thanks to
  takanao ENDOH.

0.13.1 (2012-08-16)
===================

- Fixed bug where mode resources created by string 'shortcut' didn't
  inherit the renderer, bundling, dependency parameters.

0.13 (2012-08-15)
=================

- DummyNeededResources did not takes the slots argument.

- Resource.need() did not process the slots argument, despite the argument
  being documented.

- Added slots argument to Group.need().


0.12 (2012-08-05)
=================

- Documentation fix in code samples, thanks to Toby Dacre.

- Fix issue #74, minified .js not served in bottom unless force_bottom,
  thanks to Toby Dacre.

- Cherry picked pull request #1 "support-wsgi-apps-not-mounted-at-/",
  thanks to Éric Lemoine.

- Add print css renderer.

0.11.4 (2012-01-14)
===================

- There was another bug with ordering resources when multiple libraries
  were involved. This time the way library_nr was calculated was changed
  so that it wouldn't happen anymore.

  The intent of library_nr was to have it always be 1 higher than the
  maximum library_nr of any libraries this library is based on.

  In practice this wouldn't always happen, because each resource had
  its own library_nr. In some circumstances the resources in libraries
  depending on other libraries would consistently get a library_nr too
  low, as each resource they were based on had a library_nr that was
  too low as well, even though another resource could exist in that
  library with a higher library_nr. This could cause the library_nr of
  all resources in a library to be too low.

  This is now fixed to moving library_nr to the place it should've
  maintained on in the first place: the library itself. It is
  calculated now once per library, just before the resources are